syntax = "proto3";

option go_package = "./;protobuf";
package protobuf;

message SegmentMessage {
  // hash of the entire original message
  bytes entire_message_hash = 1;
  // Index of this segment within the entire original message
  uint32 index = 2;
  // Total number of segments the entire original message is divided into
  uint32 segments_count = 3;
  // The payload data for this particular segment
  bytes payload = 4;
  // Index of this parity segment
  uint32 parity_segment_index = 5;
  // Total number of parity segments
  uint32 parity_segments_count = 6;
}
